hphp/hack/test/typecheck/array/safe_vector_array/disallow_darray_with_wrong_value_type_where_varray_or_darray_is_required.php
<?hh // partial

function test(): varray_or_darray<int> {
  return darray["key" => true];
}
